restrict to add new account

--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,8 +1,12 @@
 <p id="notice"><%= notice %></p>
 
+
 <p>
-  <strong>Account Name:</strong>
-  <%= @account.name %>
+  <strong>Account Name:</strong></br>
+  <div><%= "Name:" %> <%= @account.name %></div></br>
+  <div><%= "Number:" %> <%= @account.number %></div></br>
+  <div><%= "Sort Code:" %> <%= @account.sort_code %></div></br>
+  <div><%= "Balance:" %> <%= @account.balance %></div></br>
 </p>
 
 
